--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "css.gg": "^2.0.0",
+    "fast-simplex-noise": "^4.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "rita": "^2.4.200",
     "styled-components": "^5.3.0",
     "three": "^0.130.1"
   },
