--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "css.gg": "^2.0.0",
     "fast-simplex-noise": "^4.0.0",
+    "freeverb": "^1.1.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "rita": "^2.4.200",
