--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.6",
     "css.gg": "^2.0.0",
     "fast-simplex-noise": "^4.0.0",
     "freeverb": "^1.1.2",
