--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
   },
   "dependencies": {
     "@react-three/fiber": "^7.0.6",
-    "css.gg": "^2.0.0",
-    "fast-simplex-noise": "^4.0.0",
     "freeverb": "^1.1.2",
     "react": "^17.0.0",
     "react-anime": "^4.0.4",
     "react-dom": "^17.0.0",
     "react-icons": "^4.2.0",
+    "react-markdown": "^7.0.0",
     "rita": "^2.4.200",
-    "styled-components": "^5.3.0",
     "three": "^0.130.1"
   },
   "devDependencies": {
