--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "version": "0.0.0",
+  "name": "viardot",
+  "version": "1.0.0",
+  "description": "Virtual opera singer",
+  "main": "viardot.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/louisdutton/viardot.git"
+  },
+  "keywords": [
+    "AudioWorklet"
+  ],
+  "author": "Louis Dutton",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/louisdutton/viardot/issues"
+  },
+  "homepage": "https://github.com/louisdutton/viardot#readme",
   "dependencies": {
-    "@react-three/fiber": "^7.0.6",
     "freeverb": "^1.1.2",
-    "react": "^17.0.0",
-    "react-anime": "^4.0.4",
-    "react-dom": "^17.0.0",
-    "react-icons": "^4.2.0",
-    "react-markdown": "^7.0.0",
-    "rita": "^2.4.200",
-    "three": "^0.130.1"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.3.7"
+    "rita": "^2.4.200"
   }
 }
