--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/louisdutton/viardot#readme",
   "dependencies": {
+    "freeverb": "^1.1.2",
     "rita": "^2.4.200",
     "standardized-audio-context": "^25.3.6"
   },
