--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "watch": true,
+    // "watch": true,
     "target": "ES6",                                     
     "module": "ES6",                                        
     "strict": true,
     "noImplicitAny": false,
     "skipLibCheck": true,
-    "sourceMap": true,
-    "outDir": "build",
-    "allowJs": false,
+    "outDir": "build/src",
+    "allowJs": true, // for worklets
     "strictPropertyInitialization": true,
-		"downlevelIteration": true,
-    "removeComments": false,
     "moduleResolution": "node",
-    "lib": ["ES6", "DOM", "ES2015"],
+    "lib": ["ES6", "DOM"],
     "baseUrl": "./"
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
