--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,9 @@
     "target": "ES6",                                     
     "module": "ES6",                                        
     "strict": true,
-    "noImplicitAny": false,
-    "skipLibCheck": true,
     "outDir": "build/src",
-    "allowJs": true, // for worklets
+    "declaration": true,
+    "allowJs": true,
     "strictPropertyInitialization": true,
     "moduleResolution": "node",
     "lib": ["ES6", "DOM"],
