--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "viardot",
   "version": "1.0.3",
   "description": "Vocal engine",
-  "main": "src/index.js",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "type": "module",
   "scripts": {
-    "compile": "npx tsc",
-    "copy": "cp README.md build/",
-    "build": "npm run compile && npm run copy"
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -27,7 +26,6 @@
   },
   "homepage": "https://github.com/louisdutton/viardot#readme",
   "dependencies": {
-    "freeverb": "^1.1.2",
     "rita": "^2.4.200",
     "standardized-audio-context": "^25.3.6"
   },
