--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "compileOnSave": true,
+  "compileOnSave": false,
   "compilerOptions": {
     // "watch": true,
     "target": "ES6",                                     
     "module": "ES6",                                        
     "strict": true,
-    "outDir": "build/src",
+    "outDir": "dist",
     "declaration": true,
     "allowJs": true,
     "strictPropertyInitialization": true,
@@ -13,7 +13,7 @@
     "lib": ["ES6", "DOM"],
     "baseUrl": "./"
   },
-  "exclude": [
-    "build"
+  "include": [
+    "src"
   ]
 }
