--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    // "watch": true,
     "target": "ES6",                                     
-    "module": "ES6",                                        
+    "module": "ES2015",                                        
     "strict": true,
     "outDir": "dist",
     "declaration": true,
-    "allowJs": true,
-    "strictPropertyInitialization": true,
+    "allowJs": false,
+		"strictPropertyInitialization": true,
+		"downlevelIteration": true,
+		"experimentalDecorators": true,
     "moduleResolution": "node",
-    "lib": ["ES6", "DOM"],
+    "lib": ["ES6", "DOM", "ES2015"],
     "baseUrl": "./"
   },
   "include": [
