--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.5",
   "description": "Vocal engine",
   "type": "module",
-  "main": "dist/index.js",
+  "exports": "./dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "README.md",
