--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.5",
   "description": "Vocal engine",
   "type": "module",
-  "exports": "./dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "README.md",
@@ -11,8 +11,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "npx tsc",
-    "lint": "eslint 'src/*/**/*.{js,ts,tsx}' --quiet --fix"
+    "build": "tsc",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "repository": {
     "type": "git",
@@ -42,16 +43,10 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
-  },
-  "prettier": {
-    "semi": false,
-    "trailingComma": "es5",
-    "singleQuote": false,
-    "printWidth": 120,
-    "tabWidth": 2
   }
 }
