--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,13 @@
     "strict": true,
     "outDir": "dist",
     "declaration": true,
+    "declarationDir": "dist/types",
+    "sourceMap": true,
     "allowJs": false,
 		"strictPropertyInitialization": true,
-		"downlevelIteration": true,
 		"experimentalDecorators": true,
     "moduleResolution": "node",
-    "lib": ["ES6", "DOM", "ES2015"],
+    "lib": ["ES6", "DOM", "ES2020"],
     "baseUrl": "./"
   },
   "include": [
