--- a/package.json
+++ b/package.json
@@ -48,5 +48,12 @@
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
+  },
+  "prettier": {
+    "semi": false,
+    "trailingComma": "es5",
+    "singleQuote": false,
+    "printWidth": 120,
+    "tabWidth": 2
   }
 }
