--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vocal engine",
   "type": "module",
   "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "files": [
     "README.md",
     "LICENSE.md",
