--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,14 @@
   "compileOnSave": false,
   "compilerOptions": {
     "target": "ES6",                                     
-    "module": "ES2020",                                        
+    "module": "ES6",                                        
     "strict": true,
     "outDir": "dist",
     "declaration": true,
-    "declarationDir": "dist/types",
-    "sourceMap": true,
-    "allowJs": false,
-		"strictPropertyInitialization": true,
+    "declarationDir": "types",
+    "esModuleInterop": true,
 		"experimentalDecorators": true,
     "moduleResolution": "node",
-    "lib": ["ES6", "DOM", "ES2020"],
     "baseUrl": "./"
   },
   "include": [
