--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -8,8 +8,10 @@ license = "MIT"
 [dependencies]
 wasm-bindgen = "0.2.78"
 simdnoise = "3.1.6"
-console_error_panic_hook = { version = "0.1.7", optional = true }
+# console_error_panic_hook = { version = "0.1.7", optional = true }
 rand = "0.8.4"
+byteorder = "1.2.7"
+num = "0.4.0"
 
 [dependencies.web-sys]
 version = "0.3.55"
