--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   },
   "homepage": "https://github.com/louisdutton/belcanto#readme",
   "dependencies": {
-    "rita": "^2.4.200",
-    "tone": "^14.7.77"
+  
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -51,10 +50,10 @@
     "typescript": "^4.4.4"
   },
   "prettier": {
-    "semi": false,
+    "semi": true,
     "trailingComma": "es5",
     "singleQuote": false,
     "printWidth": 120,
-    "tabWidth": 2
+    "tabWidth": 4
   }
 }
