--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "url": "https://github.com/louisdutton/belcanto/issues"
   },
   "homepage": "https://github.com/louisdutton/belcanto#readme",
-  "dependencies": {
-  
-  },
+  "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
@@ -54,6 +52,6 @@
     "trailingComma": "es5",
     "singleQuote": false,
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 2
   }
 }
