--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "build-rust": "",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
   },
