--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "build-rust": "wasm-pack build rust --out-dir dist",
+    "build-rs": "wasm-pack build --target web rust --out-dir dist",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
   },
@@ -37,7 +37,9 @@
     "url": "https://github.com/louisdutton/belcanto/issues"
   },
   "homepage": "https://github.com/louisdutton/belcanto#readme",
-  "dependencies": {},
+  "dependencies": {
+    "wasm-flood-fill": "^1.1.1"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
