--- a/src/web/Cargo.toml
+++ b/src/web/Cargo.toml
@@ -11,4 +11,5 @@ crate-type = ["cdylib"]
 [dependencies]
 core = {path = "../core"}
 getrandom = {version = "0.2.4", features = ["js"]}
-wasm-bindgen = "0.2.78"
+# wasm-bindgen = "0.2.78"
+wee_alloc = "0.4.5"
